--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <div class="wrapper">
         <div class="col">
-            <button class="btn btn-1">Get Premium</button>
-            <button class="btn btn-2">Get Premium</button>
-            <button class="btn btn-3">Get Premium</button>
-            <button class="btn btn-4">Get Premium</button>
-            <button class="btn btn-5">Get Premium</button>
+            <button class="btn btn-1"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-2"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-3"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-4"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-5"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
         </div>
         <div class="col">
-            <button class="btn btn-6">Get Premium</button>
-            <button class="btn btn-7">Get Premium</button>
-            <button class="btn btn-8">Get Premium</button>
-            <button class="btn btn-9">Get Premium</button>
+            <button class="btn btn-6"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-7"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-8"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
+            <button class="btn btn-9"><img src="./rocket-2-line.svg" alt=""> Get Premium</button>
             <button class="btn btn-10">
                 <div class="a"></div>
                 <div class="b"></div>
-                Get Premium
+                <img src="./rocket-2-line.svg" alt=""> Get Premium
             </button>
         </div>
     </div>
